<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>datasophon</artifactId>
        <groupId>com.datasophon</groupId>
        <version>${revision}</version>
    </parent>

    <artifactId>datasophon-service</artifactId>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
    <dependencies>
        <!-- 依赖数据访问层和公共模块 -->
        <dependency>
            <groupId>com.datasophon</groupId>
            <artifactId>datasophon-dao</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.datasophon</groupId>
            <artifactId>datasophon-common</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Spring Boot Web -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion> <!-- 排除Tomcat -->
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jetty</artifactId> <!-- 引入Jetty -->
        </dependency>
        
        <!-- Caffeine缓存（用于环境检查状态管理） -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>3.2.2</version>
        </dependency>
        
        <!-- HTTP客户端 -->
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.pekko</groupId>
            <artifactId>pekko-actor_3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.pekko</groupId>
            <artifactId>pekko-remote_3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.pekko</groupId>
            <artifactId>pekko-persistence_3</artifactId>
        </dependency>

        <!-- 插件生态系统依赖 -->
        <dependency>
            <groupId>com.datasophon</groupId>
            <artifactId>datasophon-plugin-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        
        <!-- 官方pf4j-spring支持 -->
        <dependency>
            <groupId>org.pf4j</groupId>
            <artifactId>pf4j-spring</artifactId>
        </dependency>
        
        <!-- K8s业务模块：被service层调用，处理K8s相关业务 -->
        <dependency>
            <groupId>com.datasophon</groupId>
            <artifactId>datasophon-kubernetes</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.tukaani</groupId>
            <artifactId>xz</artifactId>
        </dependency>
        <!-- ZIP加密支持 -->
        <dependency>
            <groupId>net.lingala.zip4j</groupId>
            <artifactId>zip4j</artifactId>
        </dependency>

        <!-- 7z压缩支持 -->
        <dependency>
            <groupId>net.sf.sevenzipjbinding</groupId>
            <artifactId>sevenzipjbinding</artifactId>
        </dependency>
        <dependency>
            <groupId>net.sf.sevenzipjbinding</groupId>
            <artifactId>sevenzipjbinding-all-platforms</artifactId>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>
        

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- 插件生态系统依赖已在前面声明，此处移除重复依赖 -->

        <!-- db-scheduler 现代化调度框架 -->
        <dependency>
            <groupId>com.github.kagkarlsson</groupId>
            <artifactId>db-scheduler-spring-boot-starter</artifactId>
            <version>16.0.0</version>
        </dependency>
        
        <!-- db-scheduler-ui 可视化管理界面 -->
        <dependency>
            <groupId>no.bekk.db-scheduler-ui</groupId>
            <artifactId>db-scheduler-ui-starter</artifactId>
            <version>4.4.0</version>
            <exclusions>
                <!-- 排除旧版本的db-scheduler，使用16.0.0版本 -->
                <exclusion>
                    <groupId>com.github.kagkarlsson</groupId>
                    <artifactId>db-scheduler</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.github.kagkarlsson</groupId>
                    <artifactId>db-scheduler-spring-boot-starter</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <!-- db-scheduler 任务历史记录 -->
        <dependency>
            <groupId>io.rocketbase.extension</groupId>
            <artifactId>db-scheduler-log-spring-boot-starter</artifactId>
            <version>0.7.0</version>
            <exclusions>
                <!-- 排除旧版本的db-scheduler，使用16.0.0版本 -->
                <exclusion>
                    <groupId>com.github.kagkarlsson</groupId>
                    <artifactId>db-scheduler</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.github.kagkarlsson</groupId>
                    <artifactId>db-scheduler-spring-boot-starter</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- PF4J插件框架 -->
        <dependency>
            <groupId>org.pf4j</groupId>
            <artifactId>pf4j</artifactId>
        </dependency>
        <dependency>
            <groupId>org.pf4j</groupId>
            <artifactId>pf4j-spring</artifactId>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-reload4j</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- 配置处理 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- 监控端点 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- 测试支持 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <!-- 🔧 修复：Service模块编译器配置简化 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <release>21</release>
                    <encoding>UTF-8</encoding>
                    <!-- 🔧 强化编码配置 -->
                    <fork>true</fork>
                    <meminitial>1024m</meminitial>
                    <maxmem>2048m</maxmem>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-J-Dfile.encoding=UTF-8</arg>
                        <arg>-J-Duser.language=zh</arg>
                        <arg>-J-Duser.country=CN</arg>
                        <arg>-J-Dconsole.encoding=UTF-8</arg>
                        <arg>-J-Dstdout.encoding=UTF-8</arg>
                        <arg>-J-Dstderr.encoding=UTF-8</arg>
                    </compilerArgs>
                    <!-- 🔧 修复：正确的注解处理器配置 -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>0.2.0</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            
            <!-- 资源文件编码配置 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <!-- 明确指定资源文件处理编码 -->
                    <propertiesEncoding>UTF-8</propertiesEncoding>
                    <!-- 非Latin1字符不转义，保持UTF-8 -->
                    <useDefaultDelimiters>true</useDefaultDelimiters>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>